# sgEngine

./: .gitignore  CMakeLists.txt  README.md
include/Supergoon/: Coroutine.h  Events.hpp  Filesystem.hpp  Game.hpp  Input.hpp  Log.hpp  Lua.h  Sound.hpp  Video.hpp  pch.hpp
include/Supergoon/Aseprite/: AsepriteAnimation.hpp
include/Supergoon/Content/: AsepriteDocument.hpp  Content.hpp  ContentRegistry.hpp  Font.hpp  Image.hpp  Sfx.hpp  Text.hpp
include/Supergoon/ECS/: GameObject.h  Gameobject.hpp
include/Supergoon/ECS/Components/: AnimationComponent.hpp  CameraComponent.hpp  Components.hpp  GameStateComponent.hpp  ImageComponent.hpp  KeepAliveComponent.hpp  LocationComponent.hpp  SolidComponent.hpp
include/Supergoon/Graphics/: Graphics.hpp
include/Supergoon/Interfaces/: Loader.hpp  Unloader.hpp
include/Supergoon/Physics/: AABB.hpp  Directions.hpp  Physics.hpp
include/Supergoon/Primitives/: Color.h  Color.hpp  Point.h  Point.hpp  Rectangle.hpp  Vector2.h  Vector2.hpp
include/Supergoon/Tween/: Sequence.hpp  Tween.hpp
include/Supergoon/UI/: Panel.hpp  UI.hpp  UIAnimation.hpp  UIHorizontalLayoutGroup.hpp  UIImage.hpp  UIObject.hpp  UIObjectAnimator.hpp  UIProgressBar.hpp  UIText.hpp  UIVerticalLayoutGroup.hpp
include/Supergoon/Widgets/: ConsoleWidget.hpp  ContentWidget.hpp  Game.hpp  Global.hpp  LevelWidget.hpp  SoundWidget.hpp  UIWidget.hpp  Widgets.hpp
include/Supergoon/World/: Level.hpp  TiledMap.hpp
sound/: CMakeLists.txt
sound/include/SupergoonEngine/: Bgm.h  Sfx.h  Stream.h
sound/src/: Bgm.c  Sfx.c  Stream.c
src/: Coroutine.c  Events.cpp  Filesystem.cpp  Game.cpp  Lua.c  Sound.cpp
src/Aseprite/: AsepriteAnimation.cpp
src/Content/: AsepriteDocument.cpp  Content.cpp  ContentRegistry.cpp  Font.cpp  Image.cpp  Sfx.cpp  Text.cpp
src/ECS/: Components.cpp  GameObject.c  GameObject.cpp
src/Graphics/: Graphics.cpp
src/Physics/: Physics.cpp  StaticObjectComponent.cpp
src/Tween/: Sequence.cpp  Tween.cpp
src/UI/: Panel.cpp  UI.cpp  UIAnimation.cpp  UIHorizontalLayoutGroup.cpp  UIImage.cpp  UIObject.cpp  UIObjectAnimator.cpp  UIProgressBar.cpp  UIText.cpp  UIVerticalLayoutGroup.cpp
src/Widgets/: ConsoleWidget.cpp  ContentWidget.cpp  Game.cpp  Global.cpp  LevelWidget.cpp  SoundWidget.cpp  UIWidget.cpp  Widgets.cpp
src/World/: Level.cpp  TiledMap.cpp
